feat: finish desktop headeR

--- a/asvla/src/components/forge/nav/PrimarySearchAppBar.scss
+++ b/asvla/src/components/forge/nav/PrimarySearchAppBar.scss
@@ -3,11 +3,11 @@
   background-color: rgb(33 38 69) !important;
 }
 
+.css-96uuyl {
+  border-radius: 100px !important;
+}
 @media (min-width: 600px) {
   .css-95f9g5-MuiToolbar-root {
     min-height: 70px !important;
   }
-}
-.css-96uuyl {
-  border-radius: 100px;
 }
