feat: idk what i did

--- a/asvla/src/components/forge/promoSildes/promoSlideOne/PromoSlideOne.scss
+++ b/asvla/src/components/forge/promoSildes/promoSlideOne/PromoSlideOne.scss
@@ -1,4 +1,4 @@
-@import "../../../../assets/styles/common.scss";
+@use "../../../../assets/styles/common.scss";
 
 .promoSlideOne {
   height: 100%;
