--- a/asvla/src/components/forge/TopGamesSection/TopGames.scss
+++ b/asvla/src/components/forge/TopGamesSection/TopGames.scss
@@ -1,6 +1,149 @@
-@import "../../../assets/styles/common.scss";
+@use "../../../assets/styles/common.scss";
 
 .topGamesSection {
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
+
+  &__wrap {
+    width: 87%;
+    height: 90%;
+    margin: 25px auto 0 auto;
+    position: relative;
+    background-color: darkblue;
+
+    &-title {
+      max-width: 270px;
+      padding-top: 20px;
+      gap: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: nowrap;
+
+      span {
+        font-size: 22px;
+        color: #fff;
+        padding-left: 10px;
+      }
+      a {
+        font-size: 14px;
+        color: rgb(0 255 109);
+        background: #3b82f680;
+        padding: 5px 10px;
+        border-radius: 5px;
+      }
+    }
+    &-gamesBox {
+      margin-top: 10px;
+      height: 100%;
+      background-color: red;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      padding: 10px 5px;
+    }
+  }
+}
+.card {
+  position: relative;
+  width: 234.75px;
+  height: 365.156px;
+  //   overflow: hidden;
+  transition: 0.4s ease-in-out;
+
+  &__inside {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .hiddenTitle {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      text-align: center;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease, visibility 0.3s ease;
+    }
+
+    .playButton {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 50px;
+      height: 50px;
+      background-color: green;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 4px;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease, visibility 0.3s ease;
+
+      &::before {
+        content: "";
+        display: block;
+        width: 0;
+        height: 0;
+        border-left: 15px solid black;
+        border-top: 10px solid transparent;
+        border-bottom: 10px solid transparent;
+      }
+    }
+  }
+
+  &:hover {
+    background: rgba(0, 0, 0, 0.5);
+
+    .hiddenTitle,
+    .playButton {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+}
+.topGamesSection__swiper {
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+.topGamesSection__swiper .swiper {
   width: 90%;
-  background-color: #142344;
+}
+
+.TopGames-button-next::after {
+  color: white;
+  z-index: 10;
+  font-size: 20px;
+}
+.TopGames-button-prev.swiper-button-disabled {
+  color: white;
+  z-index: 10;
+  font-size: 20px;
+}
+.topGamesSection__swiper {
+  .TopGames-button-next,
+  .TopGames-button-prev {
+    position: absolute;
+
+    top: 10px;
+    left: 30px;
+    color: white;
+    z-index: 10;
+    font-size: 20px;
+  }
 }
