--- a/asvla/src/components/forge/promo/Promo.scss
+++ b/asvla/src/components/forge/promo/Promo.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/styles/common.scss";
+@use "../../../assets/styles/common.scss";
 
 .promoPage {
   margin-top: 70px;
@@ -19,7 +19,7 @@
 }
 
 .promoPage__swiper {
-  width: 90%;
+  width: 100%;
   height: 90%;
   margin: 25px auto 0 auto;
   position: relative;
