--- a/asvla/src/components/forge/TopGamesSection/TopGames.scss
+++ b/asvla/src/components/forge/TopGamesSection/TopGames.scss
@@ -2,7 +2,6 @@
 
 .topGamesSection {
   width: 100%;
-  height: 400px;
   margin: 0 auto;
 
   &__wrap {
@@ -10,7 +9,7 @@
     height: 90%;
     margin: 25px auto 0 auto;
     position: relative;
-    background-color: darkblue;
+    // background-color: darkblue;
 
     &-title {
       max-width: 270px;
@@ -37,7 +36,6 @@
     &-gamesBox {
       margin-top: 10px;
       height: 100%;
-      background-color: red;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -52,6 +50,8 @@
   height: 365.156px;
   //   overflow: hidden;
   transition: 0.4s ease-in-out;
+  cursor: pointer;
+  border-radius: 10px;
 
   &__inside {
     position: relative;
@@ -62,6 +62,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 10px;
     }
 
     .hiddenTitle {
@@ -122,28 +123,81 @@
   position: relative;
 }
 .topGamesSection__swiper .swiper {
-  width: 90%;
+  width: 100%;
 }
 
-.TopGames-button-next::after {
+.topGamesSection .topGames-swiper-button-next {
+  position: absolute;
+  right: 20px;
+  top: 45%;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #000000b3;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  z-index: 10;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.topGamesSection .topGames-swiper-button-prev {
+  position: absolute;
+  left: 17px;
+  top: 45%;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #000000b3;
+  align-items: center;
+  justify-content: center;
   color: white;
   z-index: 10;
   font-size: 20px;
 }
-.TopGames-button-prev.swiper-button-disabled {
-  color: white;
-  z-index: 10;
-  font-size: 20px;
+
+.topGames-swiper-button-next {
+  transform: rotate(180deg);
+  cursor: pointer;
 }
-.topGamesSection__swiper {
-  .TopGames-button-next,
-  .TopGames-button-prev {
+.topGamesSection .topGames-swiper-button-prev.swiper-button-disabled {
+  visibility: hidden;
+}
+.newGamesSection {
+  width: 215.594px;
+  height: 138.594px;
+  position: relative;
+}
+
+.newGamesSection__inside img {
+  width: 100%;
+  height: 100%;
+}
+.newGamesSection__inside {
+  width: 100%;
+  height: 100%;
+
+  .newGames__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-
     top: 10px;
-    left: 30px;
-    color: white;
+    left: 0;
+    right: 0;
     z-index: 10;
-    font-size: 20px;
+  }
+  span:nth-child(1) {
+    padding: 2px 4px;
+    border-radius: 2px;
+    margin-left: 2px;
+    background: rgb(233, 170, 55);
+    text-shadow: 0 0 10px #000;
+    font-size: 10px;
+    line-height: 10px;
+    color: rgb(255 255 255);
   }
 }
