--- a/asvla/src/components/forge/TopGamesSection/TopGames.scss
+++ b/asvla/src/components/forge/TopGamesSection/TopGames.scss
@@ -12,11 +12,10 @@
     // background-color: darkblue;
 
     &-title {
-      max-width: 270px;
       padding-top: 20px;
       gap: 10px;
       display: flex;
-      justify-content: space-between;
+      justify-content: start;
       align-items: center;
       flex-wrap: nowrap;
 
@@ -200,4 +199,70 @@
     line-height: 10px;
     color: rgb(255 255 255);
   }
+}
+.newGamesSection__title {
+  padding-top: 20px;
+  gap: 10px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.newGamesSection__title span {
+  font-size: 22px;
+  color: #fff;
+  padding-left: 10px;
+}
+.newGamesSection__title a {
+  font-size: 14px;
+  color: rgb(0, 255, 109);
+  background: rgba(59, 130, 246, 0.5019607843);
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.NewGamesSwiper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 102%;
+  padding: 10px 5px;
+  margin: 10px auto 0 auto;
+  position: relative;
+}
+.NewGamesSwiper .swiper {
+  width: 100%;
+}
+.NewGamesSwiper .NewGames-swiper-button-next {
+  position: absolute;
+  right: 47px;
+  top: 40%;
+  display: flex;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background: #000000b3;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  z-index: 10;
+  font-size: 20px;
+  cursor: pointer;
+  transform: rotate(180deg);
+}
+
+.NewGamesSwiper .NewGames-swiper-button-prev {
+  position: absolute;
+  left: 17px;
+  top: 40%;
+  display: flex;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background: #000000b3;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  z-index: 10;
+  font-size: 20px;
 }
