--- a/asvla/src/components/forge/TopGamesSection/TopGames.scss
+++ b/asvla/src/components/forge/TopGamesSection/TopGames.scss
@@ -123,11 +123,12 @@
 }
 .topGamesSection__swiper .swiper {
   width: 100%;
+  position: relative;
 }
 
 .topGamesSection .topGames-swiper-button-next {
   position: absolute;
-  right: 20px;
+  right: 103px;
   top: 45%;
   display: flex;
   width: 50px;
@@ -221,7 +222,9 @@
   border-radius: 5px;
 }
 
-.NewGamesSwiper {
+.NewGamesSwiper,
+.buyBonusSection,
+.megaWays {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -230,12 +233,16 @@
   margin: 10px auto 0 auto;
   position: relative;
 }
-.NewGamesSwiper .swiper {
+.NewGamesSwiper .swiper,
+.buyBonusSection .swiper {
   width: 100%;
+  position: relative;
 }
-.NewGamesSwiper .NewGames-swiper-button-next {
+.NewGamesSwiper .NewGames-swiper-button-next,
+.buyBonusSection .buyBonus-swiper-button-next,
+.megaWays .megaWays-swiper-button-next {
   position: absolute;
-  right: 47px;
+  right: 132px;
   top: 40%;
   display: flex;
   width: 35px;
@@ -251,7 +258,9 @@
   transform: rotate(180deg);
 }
 
-.NewGamesSwiper .NewGames-swiper-button-prev {
+.NewGamesSwiper .NewGames-swiper-button-prev,
+.buyBonusSection .buyBonus-swiper-button-prev,
+.megaWays .megaWays-swiper-button-prev {
   position: absolute;
   left: 17px;
   top: 40%;
@@ -265,4 +274,5 @@
   color: white;
   z-index: 10;
   font-size: 20px;
+  cursor: pointer;
 }
