feat: add footer part

--- a/asvla/src/assets/styles/fonts.scss
+++ b/asvla/src/assets/styles/fonts.scss
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: "AdjaraBold";
-  font-style: normal;
-  font-weight: normal;
+  font-style: bold;
+  font-weight: bold;
   src: url("../fonts/AdjaraMontPro-Bold.woff2"),
     url("../fonts/AdjaraMontPro-Bold.woff"),
     url("../fonts/AdjaraMontPro-Bold.otf");
