--- a/asvla/src/components/forge/TopGamesSection/TopGames.scss
+++ b/asvla/src/components/forge/TopGamesSection/TopGames.scss
@@ -1,4 +1,4 @@
-@use "../../../assets/styles/common.scss";
+@use "../../../assets/styles/mediaQuerys.scss";
 
 .topGamesSection {
   width: 100%;
@@ -11,6 +11,12 @@
     position: relative;
     // background-color: darkblue;
 
+    @include mediaQuerys.mobile {
+      width: 98%;
+      height: auto;
+      margin: 4vw auto 0 auto;
+    }
+
     &-title {
       padding-top: 20px;
       gap: 10px;
@@ -19,10 +25,20 @@
       align-items: center;
       flex-wrap: nowrap;
 
+      @include mediaQuerys.mobile {
+        padding-top: 5.33vw;
+        gap: 2.667vw;
+      }
+
       span {
         font-size: 22px;
         color: #fff;
         padding-left: 10px;
+
+        @include mediaQuerys.mobile {
+          font-size: 4.867vw;
+          padding-left: 2.667vw;
+        }
       }
       a {
         font-size: 14px;
@@ -30,6 +46,12 @@
         background: #3b82f680;
         padding: 5px 10px;
         border-radius: 5px;
+
+        @include mediaQuerys.mobile {
+          font-size: 3.733vw;
+          padding: 1.33vw 2.667vw;
+          border-radius: 1.06vw;
+        }
       }
     }
     &-gamesBox {
@@ -40,6 +62,11 @@
       align-items: center;
       width: 100%;
       padding: 10px 5px;
+
+      @include mediaQuerys.mobile {
+        margin-top: 2.06vw;
+        padding: 2.667vw 1.33vw;
+      }
     }
   }
 }
@@ -52,6 +79,12 @@
   cursor: pointer;
   border-radius: 10px;
 
+  @include mediaQuerys.mobile {
+    width: 47.2vw;
+    height: 72.533vw;
+    border-radius: 2.667vw;
+  }
+
   &__inside {
     position: relative;
     width: 100%;
@@ -62,6 +95,10 @@
       height: 100%;
       object-fit: cover;
       border-radius: 10px;
+
+      @include mediaQuerys.mobile {
+        border-radius: 2.667vw;
+      }
     }
 
     .hiddenTitle {
@@ -141,6 +178,14 @@
   z-index: 10;
   font-size: 20px;
   cursor: pointer;
+
+  @include mediaQuerys.mobile {
+    right: 10px;
+    top: 45%;
+    width: 11vw;
+    height: 11vw;
+    font-size: 5vw;
+  }
 }
 
 .topGamesSection .topGames-swiper-button-prev {
@@ -157,6 +202,14 @@
   color: white;
   z-index: 10;
   font-size: 20px;
+
+  @include mediaQuerys.mobile {
+    left: 10px;
+    top: 45%;
+    width: 11vw;
+    height: 11vw;
+    font-size: 5vw;
+  }
 }
 
 .topGames-swiper-button-next {
@@ -170,12 +223,21 @@
   width: 215.594px;
   height: 138.594px;
   position: relative;
+
+  @include mediaQuerys.mobile {
+    width: 27.733vw;
+    height: 23.733vw;
+  }
 }
 
 .newGamesSection__inside img {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+
+  @include mediaQuerys.mobile {
+    border-radius: 1.33vw;
+  }
 }
 .newGamesSection__inside {
   width: 100%;
@@ -190,16 +252,26 @@
     left: 0;
     right: 0;
     z-index: 10;
+
+    @include mediaQuerys.mobile {
+      top: 2vw;
+    }
   }
   span:nth-child(1) {
     padding: 2px 4px;
     border-radius: 2px;
-    margin-left: 2px;
     background: rgb(233, 170, 55);
     text-shadow: 0 0 10px #000;
     font-size: 10px;
     line-height: 10px;
     color: rgb(255 255 255);
+
+    @include mediaQuerys.mobile {
+      padding: 0.9vw;
+      border-radius: 0.3vw;
+      font-size: 3vw;
+      line-height: 3vw;
+    }
   }
 }
 .newGamesSection__title {
@@ -210,11 +282,23 @@
   justify-content: start;
   align-items: center;
   flex-wrap: nowrap;
+
+  @include mediaQuerys.mobile {
+    padding-top: 0;
+    padding-left: 0;
+    gap: 2vw;
+    margin: 2vw auto;
+  }
 }
 .newGamesSection__title span {
   font-size: 22px;
   color: #fff;
   padding-left: 10px;
+
+  @include mediaQuerys.mobile {
+    font-size: 5vw;
+    padding-left: 2vw;
+  }
 }
 .newGamesSection__title a {
   font-size: 14px;
@@ -222,6 +306,12 @@
   background: rgba(59, 130, 246, 0.5019607843);
   padding: 5px 10px;
   border-radius: 5px;
+
+  @include mediaQuerys.mobile {
+    font-size: 3vw;
+    padding: 1.06vw 2.1667vw;
+    border-radius: 5px;
+  }
 }
 
 .NewGamesSwiper,
@@ -235,6 +325,11 @@
   padding: 10px 5px;
   margin: 10px auto 0 auto;
   position: relative;
+
+  @include mediaQuerys.mobile {
+    padding: 2.06vw 1.066vw;
+    margin: 2.06vw auto 0 auto;
+  }
 }
 
 .NewGamesSwiper .NewGames-swiper-button-next,
@@ -242,7 +337,7 @@
 .megaWays .megaWays-swiper-button-next,
 .ci_interactive .ci_interactive-button-next {
   position: absolute;
-  right: 100px;
+  right: 127px;
   top: 40%;
   display: flex;
   width: 35px;
@@ -256,6 +351,22 @@
   font-size: 20px;
   cursor: pointer;
   transform: rotate(180deg);
+
+  @include mediaQuerys.mobile {
+    right: 2vw;
+    width: 9.33vw;
+    height: 9.33vw;
+    font-size: 5.33vw;
+    top: 30%;
+  }
+}
+@media screen and (max-width: 1670px) and (min-width: 940px) {
+  .NewGamesSwiper .NewGames-swiper-button-next,
+  .buyBonusSection .buyBonus-swiper-button-next,
+  .megaWays .megaWays-swiper-button-next,
+  .ci_interactive .ci_interactive-button-next {
+    right: 63px;
+  }
 }
 
 .NewGamesSwiper .NewGames-swiper-button-prev,
@@ -276,6 +387,14 @@
   z-index: 10;
   font-size: 20px;
   cursor: pointer;
+
+  @include mediaQuerys.mobile {
+    left: 2vw;
+    top: 30%;
+    width: 9.33vw;
+    height: 9.33vw;
+    font-size: 5.33vw;
+  }
 }
 .newgameSBox {
   background-image: url(./TopGamesIMg/bg-egt-hor.avif);
