--- a/asvla/src/components/forge/nav/PrimarySearchAppBar.scss
+++ b/asvla/src/components/forge/nav/PrimarySearchAppBar.scss
@@ -1,13 +1,122 @@
-.css-95f9g5-MuiToolbar-root {
-  background: rgb(33 38 69) !important;
-  background-color: rgb(33 38 69) !important;
-}
+@use "../../../assets/styles/mediaQuerys.scss";
 
-.css-96uuyl {
-  border-radius: 100px !important;
-}
-@media (min-width: 600px) {
-  .css-95f9g5-MuiToolbar-root {
-    min-height: 70px !important;
+.navigationHeader {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  z-index: 2000;
+  background-color: #212645;
+  border: 2px solid purple;
+  top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+
+  @include mediaQuerys.mobile {
+    width: 100%;
+    height: 15vw;
+    border: 0.533vw solid purple;
+  }
+
+  div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    a {
+      color: #ffff;
+      font-size: 20px;
+      font-weight: bold;
+      text-transform: uppercase;
+
+      @include mediaQuerys.mobile {
+        font-size: 2.5vw;
+      }
+    }
+    a:hover {
+      color: #2fdc2f;
+      transition: 0.2s ease-in-out;
+    }
+  }
+  .LoginLogo {
+    padding: 10px;
+    background-color: #2fdc2f;
+    height: 40px;
+    width: 120px;
+    border-radius: 10px;
+
+    @include mediaQuerys.mobile {
+      padding: 2.33vw;
+      height: 9vw;
+      border-radius: 0;
+      width: auto;
+      background-color: #2fdc2f;
+      border-radius: 50%;
+    }
+
+    a:hover {
+      color: #000000;
+      transition: 0.2s ease-in-out;
+    }
+  }
+  .desktopLoginText {
+    display: block;
+
+    @include mediaQuerys.mobile {
+      display: none;
+    }
+  }
+  .mobileLogin {
+    display: none;
+
+    @include mediaQuerys.mobile {
+      font-size: 4vw;
+      display: block;
+    }
+  }
+  .RegissTerLogo {
+    padding: 10px;
+    background-color: #00ff6d;
+    color: purple;
+    height: 40px;
+    width: 150px;
+    border-radius: 10px;
+
+    @include mediaQuerys.mobile {
+      padding: 2.33vw;
+      height: 9vw;
+      border-radius: 0;
+      width: auto;
+      background-color: #00ff6d;
+      border-radius: 50%;
+      color: #fff;
+    }
+
+    a {
+      color: purple;
+      font-weight: bold;
+
+      @include mediaQuerys.mobile {
+        color: #fff;
+      }
+    }
+    a:hover {
+      color: #000000;
+      transition: 0.2s ease-in-out;
+    }
+  }
+  .sighIn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 275px;
+    cursor: pointer;
+
+    @include mediaQuerys.mobile {
+      width: 20vw;
+    }
   }
 }
