--- a/asvla/src/components/forge/registrationForm/RegistrationForm.scss
+++ b/asvla/src/components/forge/registrationForm/RegistrationForm.scss
@@ -1,12 +1,31 @@
-@use "../../../assets/styles/common.scss";
+@use "../../../assets/styles/mediaQuerys.scss";
 
 .RegistrationForm {
   max-width: 400px;
-  margin: 20px auto;
+  margin: 112px auto 35px auto;
   display: flex;
   flex-direction: column;
+
+  @include mediaQuerys.mobile {
+    margin: 20vw auto;
+    max-width: 90%;
+  }
+
   div {
     margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 300px;
+
+    @include mediaQuerys.mobile {
+      margin-bottom: 3vw;
+      width: 70vw;
+      display: flex;
+      justify-content: center;
+      align-items: start;
+      margin: 2vw auto;
+    }
   }
 
   ul {
@@ -16,17 +35,69 @@
 
   li {
     margin-bottom: 5px;
+    font-size: 16px;
+
+    @include mediaQuerys.mobile {
+      margin-bottom: 1.067vw;
+      font-size: 3.5vw;
+    }
   }
 
   button {
     padding: 10px;
+    width: 300px;
     background-color: #007bff;
     color: white;
     border: none;
     cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+
+    @include mediaQuerys.mobile {
+      padding: 3vw;
+      width: 70vw;
+      display: flex;
+      justify-content: center;
+      align-items: start;
+      margin: 0 auto;
+      font-size: 5.5vw;
+      border-radius: 2vw;
+    }
   }
 
   button:hover {
     background-color: #0056b3;
+  }
+  label {
+    font-size: 18px;
+    color: #ffff;
+
+    @include mediaQuerys.mobile {
+      font-size: 4vw;
+    }
+  }
+  input,
+  select {
+    width: 300px;
+    height: 28px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    background: rgb(194, 191, 191);
+
+    @include mediaQuerys.mobile {
+      width: 70vw;
+      height: 8vw;
+      font-size: 3vw;
+    }
+  }
+  .passReq {
+    color: rgb(72, 255, 0);
+    font-size: 20px;
+    font-weight: bold;
+
+    @include mediaQuerys.mobile {
+      font-size: 6vw;
+    }
   }
 }
