--- a/asvla/src/components/forge/TopGamesSection/TopGames.scss
+++ b/asvla/src/components/forge/TopGamesSection/TopGames.scss
@@ -2,16 +2,16 @@
 
 .topGamesSection {
   width: 100%;
-  margin: 0 auto;
+  margin: 85px auto 0 auto;
 
   @include mediaQuerys.mobile {
-    margin: 20vw auto;
+    margin: 16vw auto;
   }
 
   &__wrap {
     width: 87%;
     height: 90%;
-    margin: 25px auto 0 auto;
+    margin: 85px auto 0 auto;
     position: relative;
     // background-color: darkblue;
 
@@ -206,6 +206,7 @@
   color: white;
   z-index: 10;
   font-size: 20px;
+  cursor: pointer;
 
   @include mediaQuerys.mobile {
     left: 10px;
