--- a/asvla/src/App.css
+++ b/asvla/src/App.css
@@ -22,3 +22,10 @@ h6 {
 a {
   text-decoration: none;
 }
+.wheel-container {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
