feat: add ThreeplusOne Components/ half

--- a/asvla/src/components/forge/promoSildes/promoSlideOne/PromoSlideOne.scss
+++ b/asvla/src/components/forge/promoSildes/promoSlideOne/PromoSlideOne.scss
@@ -1,7 +1,17 @@
-@use "../../../../assets/styles/common.scss";
+@use "../../../../assets/styles/mediaQuerys.scss";
 
 .promoSlideOne {
   height: 100%;
   cursor: pointer;
   background-color: rgb(16, 5, 56);
+  background-image: url(./promoSlideImg/bdb605dd99229bb048b21dcbb1ebab2b.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  width: 100%;
+
+  @include mediaQuerys.mobile {
+    background-image: url(./promoSlideImg/434dc5578d3294e42a717b164369df0b-crop-mobile.webp);
+    background-position: top center;
+  }
 }
