--- a/asvla/src/components/forge/terms/TermsComponent.scss
+++ b/asvla/src/components/forge/terms/TermsComponent.scss
@@ -8,7 +8,43 @@
     width: 98%;
     margin: 0 auto;
   }
+  .threePlusOneTerms {
+    background-color: #1f3454;
+    width: 100%;
+    height: 52px;
+    border-radius: 8px;
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    cursor: pointer;
+    font: 13px AdjaraRegular;
 
+    @include mediaQuerys.mobile {
+      height: 12vw;
+      font-size: 3vw;
+      padding: 0 5vw;
+    }
+  }
+  .rame-3 {
+    width: 100%;
+    height: 52px;
+    background-color: #1f3454;
+    border-radius: 8px;
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    cursor: pointer;
+    font: 13px AdjaraRegular;
+    @include mediaQuerys.mobile {
+      height: 12vw;
+      font-size: 3vw;
+      padding: 0 5vw;
+    }
+  }
   &__head {
     width: 100%;
     height: 52px;
@@ -26,6 +62,7 @@
       font-size: 3vw;
       padding: 0 5vw;
     }
+
     &.act > .newTerms__arrow {
       transform: rotate(180deg);
     }
@@ -63,6 +100,16 @@
       }
       @include mediaQuerys.mobile {
         font-size: 3vw;
+      }
+    }
+    .threePlusOneTerms-2 {
+      background-color: #3a5889;
+      border-radius: 0 0 8px 8px;
+      @include mediaQuerys.mobile {
+        & .newTerms__content {
+          max-height: 40vh;
+          overflow-y: scroll;
+        }
       }
     }
     &--content {
@@ -105,6 +152,8 @@
       padding: 0;
       margin: 0;
       counter-reset: my-awesome-counter;
+      .li-terms-bg {
+      }
       & > li {
         display: flex;
         align-items: center;
@@ -150,7 +199,18 @@
         margin: 3vw 0;
       }
     }
-    &.newTerms__rules--content {
+    .li-terms-bg {
+      align-items: flex-start !important;
+      background: #1f3454;
+      padding: 15px;
+      border-radius: 8px;
+      line-height: 20px;
+      @include mediaQuerys.mobile {
+        padding: 2vw;
+        line-height: 5vw;
+      }
+    }
+    .rules-p {
       & ol li {
         align-items: flex-start !important;
         background: #454e5b;
@@ -170,6 +230,7 @@
       }
     }
   }
+
   &__tabs {
     width: 100%;
     margin-bottom: 20px;
