--- a/asvla/src/components/forge/promo/Promo.scss
+++ b/asvla/src/components/forge/promo/Promo.scss
@@ -93,4 +93,8 @@
   .promoPage__swiper .promoSLIdes {
     height: 90vw !important;
   }
+  .slide-image {
+    width: 100%;
+    height: 100%;
+  }
 }
