feat: add champion-cashback

--- a/asvla/src/components/forge/sportPromos/three-plus-one/ThreePlusOne.scss
+++ b/asvla/src/components/forge/sportPromos/three-plus-one/ThreePlusOne.scss
@@ -6,7 +6,7 @@
   padding-bottom: 50px;
 
   @include mediaQuerys.mobile {
-    width: none;
+    background: none;
     padding-bottom: 15vw;
   }
 
