--- a/asvla/src/components/forge/terms/TermsComponent.scss
+++ b/asvla/src/components/forge/terms/TermsComponent.scss
@@ -27,10 +27,10 @@
       padding: 0 5vw;
     }
   }
-  .rame-3 {
+  .championBGClass {
     width: 100%;
     height: 52px;
-    background-color: #1f3454;
+    background-color: #1d5bec;
     border-radius: 8px;
     padding: 0 25px;
     display: flex;
@@ -100,6 +100,16 @@
       }
       @include mediaQuerys.mobile {
         font-size: 3vw;
+      }
+    }
+    .championBGContentClass {
+      background-color: #051431;
+      border-radius: 0 0 8px 8px;
+      @include mediaQuerys.mobile {
+        & .newTerms__content {
+          max-height: 40vh;
+          overflow-y: scroll;
+        }
       }
     }
     .threePlusOneTerms-2 {
