--- a/asvla/src/components/forge/promo/Promo.scss
+++ b/asvla/src/components/forge/promo/Promo.scss
@@ -4,7 +4,7 @@
   margin-top: 70px;
   background-image: url(./PromoImg/bg@3x.avif);
   width: 100%;
-  height: 450px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: start;
