--- a/asvla/src/components/forge/DonateButton/Donate.scss
+++ b/asvla/src/components/forge/DonateButton/Donate.scss
@@ -2,6 +2,10 @@
 
 .container__donateBtn {
   margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   button {
     padding: 10px 20px;
     background-color: #f5a623;
